--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,56 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+p {
+  margin: 0;
+}
+ul {
+  /* list-style: none; */
+  margin: 0;
+  padding: 0;
+}
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+img {
+  margin-right: 10px;
+}
+.title-item {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  font-weight: bold;
+  letter-spacing: -0.05em;
+  text-transform: uppercase;
+}
+
+.country-info {
+  font-size: 25px;
+  margin-left: 30px;
+}
+.country-title {
+  margin-bottom: 20px;
+  font-size: 35px;
+  font-weight: 900;
+}
+.list-languages {
+  display: flex;
+}
+span {
+  margin-right: 15px;
+  font-weight: bold;
+}
+
+.country-list {
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+.title-item {
+  margin-bottom: 10px;
+}
+/* .wrapper {
+  display: flex;
+  flex-direction: column;
+} */
