--- a/src/templates/country-list.hbs
+++ b/src/templates/country-list.hbs
@@ -1,6 +1,12 @@
 {{#each this}}
-
-    {{name.official}}</p>
- 
+  <li>
+    <p class='title-item'>
+      <img
+        src='{{flags.svg}}'
+        alt='flag of {{name.official}}'
+        width='30'
+        height='25'
+      />{{name.official}}</p>
+  </li>
 
 {{/each}}
